aggiunti file strade .geojson ed aggiornato notebook strade_ciclabili

--- a/Scripts/strade_ciclabili.ipynb
+++ b/Scripts/strade_ciclabili.ipynb
@@ -2,40 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c8de0a00",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: networkx in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (3.5)\n",
-      "Collecting osmnx\n",
-      "  Using cached osmnx-2.0.5-py3-none-any.whl.metadata (4.9 kB)\n",
-      "Requirement already satisfied: geopandas>=1.0.1 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from osmnx) (1.1.1)\n",
-      "Requirement already satisfied: networkx>=2.5 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from osmnx) (3.5)\n",
-      "Requirement already satisfied: numpy>=1.22 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from osmnx) (2.3.1)\n",
-      "Requirement already satisfied: pandas>=1.4 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from osmnx) (2.3.1)\n",
-      "Requirement already satisfied: requests>=2.27 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from osmnx) (2.32.4)\n",
-      "Requirement already satisfied: shapely>=2.0 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from osmnx) (2.1.1)\n",
-      "Requirement already satisfied: pyogrio>=0.7.2 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from geopandas>=1.0.1->osmnx) (0.11.0)\n",
-      "Requirement already satisfied: packaging in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from geopandas>=1.0.1->osmnx) (25.0)\n",
-      "Requirement already satisfied: pyproj>=3.5.0 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from geopandas>=1.0.1->osmnx) (3.7.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from pandas>=1.4->osmnx) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from pandas>=1.4->osmnx) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from pandas>=1.4->osmnx) (2025.2)\n",
-      "Requirement already satisfied: certifi in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from pyogrio>=0.7.2->geopandas>=1.0.1->osmnx) (2025.7.9)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas>=1.4->osmnx) (1.17.0)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from requests>=2.27->osmnx) (3.4.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from requests>=2.27->osmnx) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto-bike\\.venv\\lib\\site-packages (from requests>=2.27->osmnx) (2.5.0)\n",
-      "Using cached osmnx-2.0.5-py3-none-any.whl (101 kB)\n",
-      "Installing collected packages: osmnx\n",
-      "Successfully installed osmnx-2.0.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install networkx\n",
     "!pip install osmnx"
@@ -57,21 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "23587018",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "C:\\Users\\apera\\AppData\\Local\\Temp\\ipykernel_26404\\2585337373.py:1: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "  with open('..\\Data\\Raw\\Info_bici\\strade_ciclabili.pickle', 'rb') as x:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('..\\Data\\Raw\\Info_bici\\strade_ciclabili.pickle', 'rb') as x:    \n",
     "    G = (pickle.load(x))"
@@ -89,33 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "29996ce8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "highway\n",
-       "footway                           178673\n",
-       "service                            36722\n",
-       "residential                        25568\n",
-       "unclassified                       14866\n",
-       "pedestrian                          9803\n",
-       "                                   ...  \n",
-       "[platform, steps]                      1\n",
-       "[service, living_street]               1\n",
-       "[living_street, service]               1\n",
-       "[steps, unclassified, footway]         1\n",
-       "[steps, platform]                      1\n",
-       "Name: count, Length: 114, dtype: int64"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gdf.head\n",
     "gdf[\"highway\"].value_counts()"
@@ -191,18 +127,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "049ba3cd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2435\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gdf_primary = gdf[(gdf[\"highway\"] == \"primary\") | (gdf[\"highway\"] == \"primary_link\")]\n",
     "\n",
@@ -232,18 +160,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "5a5fbb2d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "178673\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gdf_footway = gdf[(gdf[\"highway\"] == \"footway\")]\n",
     "\n",
@@ -252,6 +172,130 @@
     "\n",
     "# Salva in GeoJSON\n",
     "gdf_primary.to_file('..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_footway.geojson', driver='GeoJSON')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3589f60e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Strade Secondary\n",
+    "\n",
+    "gdf_secondary = gdf[(gdf[\"highway\"] == \"secondary\")]\n",
+    "len(gdf_secondary)\n",
+    "print(gdf[gdf[\"highway\"] == \"secondary\"].isna().sum())\n",
+    "\n",
+    "gdf_secondary = gdf[(gdf[\"highway\"] == \"secondary\") | (gdf[\"highway\"] == \"secondary_link\")]\n",
+    "\n",
+    "print(len(gdf_secondary))  # Mostra il numero di righe\n",
+    "\n",
+    "# Salva in GeoJSON\n",
+    "gdf_secondary.to_file(\"..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_secondary.geojson\", driver='GeoJSON')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73f3f9f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Strade Tertiary\n",
+    "\n",
+    "gdf_tertiary = gdf[(gdf[\"highway\"] == \"tertiary\")]\n",
+    "len(gdf_secondary)\n",
+    "print(gdf[gdf[\"highway\"] == \"tertiary\"].isna().sum())\n",
+    "\n",
+    "gdf_tertiary = gdf[(gdf[\"highway\"] == \"tertiary\") | (gdf[\"highway\"] == \"tertiary_link\")]\n",
+    "\n",
+    "# Salva in GeoJSON\n",
+    "gdf_tertiary.to_file(\"..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_tertiary.geojson\", driver='GeoJSON')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6d93b91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Residential\n",
+    "\n",
+    "gdf_residential = gdf[(gdf[\"highway\"] == \"residential\")]\n",
+    "print(gdf[gdf[\"highway\"] == \"residential\"].isna().sum())\n",
+    "\n",
+    "print(len(gdf_secondary))  # Mostra il numero di righe\n",
+    "\n",
+    "# Salva in GeoJSON\n",
+    "gdf_residential.to_file(\"..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_residential.geojson\", driver='GeoJSON')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60c75e07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Service\n",
+    "\n",
+    "gdf_service = gdf[(gdf[\"highway\"] == \"service\")]\n",
+    "print(gdf[gdf[\"highway\"] == \"service\"].isna().sum())\n",
+    "\n",
+    "print(len(gdf_service))  # Mostra il numero di righe\n",
+    "\n",
+    "# Salva in GeoJSON\n",
+    "gdf_service.to_file(\"..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_service.geojson\", driver='GeoJSON')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a469e4df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creazione geodataframe manuale\n",
+    "\n",
+    "import json\n",
+    "import geopandas as gpd\n",
+    "from shapely.geometry import shape\n",
+    "import numpy as np\n",
+    "\n",
+    "# Carica il GeoJSON come dizionario\n",
+    "with open(\"Data/Staging/Info_bici/strade_ciclabili.geojson\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Costruisci il GeoDataFrame manualmente\n",
+    "features = data[\"features\"]\n",
+    "geometries = [shape(feature[\"geometry\"]) for feature in features]\n",
+    "properties = [feature[\"properties\"] for feature in features]\n",
+    "\n",
+    "gdf = gpd.GeoDataFrame(properties, geometry=geometries)\n",
+    "\n",
+    "# Imposta il CRS (Coordinate Reference System)\n",
+    "gdf.set_crs(\"EPSG: 4326\", inplace=True)\n",
+    "\n",
+    "# 1. Assicuriamoci che valori None siano convertiti in np.nan\n",
+    "gdf['highway'] = gdf['highway'].replace({None: np.nan})\n",
+    "\n",
+    "# 2. Se necessario, converti in stringa (utile se ci sono tipi misti)\n",
+    "gdf['highway'] = gdf['highway'].astype('object')\n",
+    "\n",
+    "# 3. Crea la maschera con entrambe le condizioni:\n",
+    "mask = (\n",
+    "    gdf['highway'].isna() |\n",
+    "    (gdf['highway'] == 'unclassified')\n",
+    ")\n",
+    "\n",
+    "# 4. Applica il filtro\n",
+    "gdf_filtered = gdf[mask]\n",
+    "\n",
+    "gdf_filtered.duplicated()\n",
+    "\n",
+    "gdf_filtered.to_file (\"Data/Staging/Info_bici/highway_null_unclassified.geojson\")"
    ]
   }
  ],
