--- a/Scripts/Grafi.ipynb
+++ b/Scripts/Grafi.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
+    "from shapely import LineString\n",
     "\n",
     "import geopandas as gpd\n",
     "import osmnx as ox\n",
@@ -34,6 +35,8 @@
     "PATH_GEOJSON_STRADE_E_CICLABILI_STAGING = \"../Data/Staging/Analisi/strade_e_ciclabili.geojson\"\n",
     "PATH_GEOJSON_COMPLETO_STAGING = \"../Data/Staging/Analisi/completo.geojson\"\n",
     "\n",
+    "PATH_GEOJSON_PERCORSI_STAGING = \"../Data/Staging/Analisi/percorsi.geojson\"\n",
+    "\n",
     "PATH_TEST_STAGING = \"../Data/Staging/Analisi/\""
    ]
   },
@@ -55,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "id": "6c9e2a7f",
    "metadata": {},
    "outputs": [],
@@ -80,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "fe33227d",
    "metadata": {},
    "outputs": [],
@@ -99,15 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "ba1cf76f",
    "metadata": {},
    "outputs": [],
    "source": [
     "for u, v, k, data in G_strade.edges(data=True, keys=True):\n",
-    "    data['weight'] = data['length'] * 2 # Per ora\n",
-    "    data[\"tipo\"] = \"Strade_ciclabili\"\n",
-    "    data[\"artificiale\"] = False"
+    "    # Scelgo gli attributi da mantenere\n",
+    "    new_data = {}\n",
+    "    new_data['length'] = data['length']\n",
+    "    new_data['name'] = data.get('name', None)\n",
+    "    new_data['weight'] = data['length'] * 1 # Per ora\n",
+    "    new_data[\"tipo\"] = \"Strade_ciclabili\"\n",
+    "    new_data[\"artificiale\"] = False\n",
+    "    new_data[\"geometry\"] = data.get(\"geometry\", LineString([(G_strade.nodes[u][\"x\"], G_strade.nodes[u][\"y\"]),\n",
+    "                                        (G_strade.nodes[v][\"x\"], G_strade.nodes[v][\"y\"])]))\n",
+    "    data.clear()\n",
+    "    data.update(new_data)"
    ]
   },
   {
@@ -120,14 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "d83de30b",
    "metadata": {},
    "outputs": [],
    "source": [
     "G_strade = G_strade.to_undirected()\n",
     "G_strade = Graph_functions.add_edge_near_nodes(G_strade,\n",
-    "                                               weight_moltiplicator=2,  # Per ora\n",
+    "                                               weight_moltiplicator=1,  # Per ora\n",
     "                                               tipo = \"Strade_ciclabili\", artificiale = True)"
    ]
   },
@@ -141,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "02eef17a",
    "metadata": {},
    "outputs": [],
@@ -173,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "044e736b",
    "metadata": {},
    "outputs": [],
@@ -190,7 +201,7 @@
     "gdf_ciclabili_staging[\"lunghezza\"] = gdf_ciclabili_staging[\"lunghezza\"].astype(int)\n",
     "gdf_ciclabili_staging = gdf_ciclabili_staging.drop([\"id_amat\", \"id_via\",\"gerarchia\"], axis=1)\n",
     "\n",
-    "G_ciclabili = Graph_functions.geojson_to_graph(gdf_ciclabili_staging, weight_moltiplicator=1, tipo = \"Ciclabile\", artificiale = False)\n",
+    "G_ciclabili = Graph_functions.geojson_to_graph(gdf_ciclabili_staging, weight_moltiplicator=0, tipo = \"Ciclabile\", artificiale = False)\n",
     "with open(PATH_CICLABILI_PICKLE_STAGING, \"wb\") as f:\n",
     "    pickle.dump(G_ciclabili, f)"
    ]
@@ -205,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "4770ac5f",
    "metadata": {},
    "outputs": [],
@@ -216,7 +227,7 @@
     "\n",
     "# Aggiungiamo archi artificiali\n",
     "G_ciclabili = G_ciclabili.to_undirected()\n",
-    "G_ciclabili = Graph_functions.add_edge_near_nodes(G_ciclabili, weight_moltiplicator = 1, tipo = \"Ciclabile\", artificiale = True)\n",
+    "G_ciclabili = Graph_functions.add_edge_near_nodes(G_ciclabili, weight_moltiplicator = 0, tipo = \"Ciclabile\", artificiale = True)\n",
     "\n",
     "# Salviamo pickle e geojson in staging\n",
     "_, gdf_edges = ox.graph_to_gdfs(G_ciclabili)\n",
@@ -243,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "id": "c393c9b3",
    "metadata": {},
    "outputs": [],
@@ -254,17 +265,7 @@
     "\n",
     "# Carichiamo Graph Strade\n",
     "with open(PATH_STRADE_CICLABILI_PICKLE_STAGING, \"rb\") as f:\n",
-    "    G_strade = pickle.load(f)\n",
-    "\n",
-    "for n in G_ciclabili.nodes:\n",
-    "    G_ciclabili.nodes[n][\"origin\"] = \"strada\"\n",
-    "for n in G_strade.nodes:\n",
-    "    G_strade.nodes[n][\"origin\"] = \"pista\"\n",
-    "G_compose = nx.compose(G_strade, G_ciclabili)\n",
-    "G_compose_merged = Graph_functions.add_edge_near_nodes(G_compose,\n",
-    "                                                       weight_moltiplicator = 1.5,\n",
-    "                                                       tipo = \"Join_ciclabile_strade\",\n",
-    "                                                       artificiale=True)"
+    "    G_strade = pickle.load(f)"
    ]
   },
   {
@@ -277,7 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
+   "id": "accac20f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for n in G_ciclabili.nodes:\n",
+    "    G_ciclabili.nodes[n][\"origin\"] = \"strada\"\n",
+    "for n in G_strade.nodes:\n",
+    "    G_strade.nodes[n][\"origin\"] = \"pista\"\n",
+    "G_compose = nx.compose(G_strade, G_ciclabili)\n",
+    "G_compose_merged = Graph_functions.add_edge_near_nodes(G_compose,\n",
+    "                                                       weight_moltiplicator = 0,\n",
+    "                                                       tipo = \"Join_ciclabile_strade\",\n",
+    "                                                       artificiale=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "id": "32af8897",
    "metadata": {},
    "outputs": [],
@@ -288,24 +307,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "id": "659b6411",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "74\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Carichiamo Parchi GeoDataFrame\n",
     "gdf_parchi = gpd.read_file(PATH_PARCHI_CLEAN)\n",
     "\n",
     "G_compose_merged_parchi = Graph_functions.connect_poi_nodes_to_graph(G_compose_merged, gdf_parchi,\n",
-    "                                                                     weight_moltiplicator=1,\n",
     "                                                                     tipo = \"parchi\",\n",
     "                                                                     poi = True,\n",
     "                                                                     artificial=True)"
@@ -313,13 +323,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "id": "2d3de343",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf_compose = ox.graph_to_gdfs(G_compose_merged_parchi, edges=True, nodes=False)\n",
     "gdf_compose.to_file(PATH_GEOJSON_COMPLETO_STAGING, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b99d6ee6",
+   "metadata": {},
+   "source": [
+    "## Test 1: nx.shortest_path() di tutte le combinazioni di P.O.I e poi nx.minimum_spanning_tree()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "fff8ae41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "from tqdm import tqdm \n",
+    "\n",
+    "poi_nodes = [n for n, d in G_compose_merged_parchi.nodes(data=True) if d.get(\"tipo\") == \"parchi\"]\n",
+    "\n",
+    "poi_pairs = list(combinations(poi_nodes, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f5009e19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_complete = nx.Graph()\n",
+    "    \n",
+    "pbar = tqdm(total=len(list(poi_pairs)), desc=\"Estrazione tweet\")\n",
+    "for u, v in poi_pairs:\n",
+    "    try:\n",
+    "        path = nx.shortest_path(G_compose_merged_parchi, source=u, target=v, weight='weight')\n",
+    "        length = sum(G_compose_merged_parchi[u][v][0]['weight'] for u,v in zip(path[:-1], path[1:]))\n",
+    "        graph_complete.add_edge(u, v, weight=length, path=path)\n",
+    "    except nx.NetworkXNoPath:\n",
+    "        continue\n",
+    "    pbar.update(1)\n",
+    "\n",
+    "mst = nx.minimum_spanning_tree(graph_complete, weight='weight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "3d607511",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from shapely.geometry import LineString\n",
+    "import geopandas as gpd\n",
+    "\n",
+    "edge_geoms = []\n",
+    "for u, v, data in mst.edges(data=True):\n",
+    "    path = data.get(\"path\")\n",
+    "    if not path:\n",
+    "        continue\n",
+    "    coords = [(G_compose_merged_parchi.nodes[n]['x'], G_compose_merged_parchi.nodes[n]['y']) for n in path]\n",
+    "    geom = LineString(coords)\n",
+    "    edge_geoms.append({\n",
+    "        \"u\": u,\n",
+    "        \"v\": v,\n",
+    "        \"geometry\": geom,\n",
+    "        \"length\": data[\"weight\"]\n",
+    "    })\n",
+    "\n",
+    "gdf_paths = gpd.GeoDataFrame(edge_geoms, geometry=\"geometry\", crs=\"EPSG:4326\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "6d8b898d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_paths.to_file(PATH_GEOJSON_PERCORSI_STAGING, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "403cca1f",
+   "metadata": {},
+   "source": [
+    "## Test 2: Algoritmo di \"steiner_tree\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "6d98e07a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nodi POI mancanti nel grafo semplice: []\n",
+      "Nodi POI fuori dalla componente principale: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_poi = [n for n in poi_nodes if n not in G_compose_merged_parchi.nodes]\n",
+    "print(f\"Nodi POI mancanti nel grafo semplice: {missing_poi}\")\n",
+    "\n",
+    "components = list(nx.connected_components(G_compose_merged_parchi))\n",
+    "largest_cc = max(components, key=len)\n",
+    "\n",
+    "poi_outside_cc = [n for n in poi_nodes if n not in largest_cc]\n",
+    "print(f\"Nodi POI fuori dalla componente principale: {poi_outside_cc}\")\n",
+    "\n",
+    "G_sub = G_compose_merged_parchi.subgraph(largest_cc).copy()\n",
+    "poi_sub = [n for n in poi_nodes if n in G_sub.nodes]\n",
+    "\n",
+    "for u, v, data in G_sub.edges(data=True):\n",
+    "    if 'weight' not in data or not isinstance(data['weight'], (int, float)):\n",
+    "        data['weight'] = 1  # o un peso di default\n",
+    "\n",
+    "from networkx.algorithms.approximation import steiner_tree\n",
+    "\n",
+    "T = steiner_tree(G_sub, terminal_nodes=poi_sub, weight='weight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "4faf0675",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_steiner = ox.graph_to_gdfs(T, edges=True, nodes=False)\n",
+    "gdf_compose.to_file(PATH_GEOJSON_COMPLETO_STAGING, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "a264d0c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68325.5469668932\n",
+      "25066.451118787856\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gdf_steiner['length'].sum())\n",
+    "print(gdf_paths['length'].sum())"
    ]
   }
  ],
