--- a/Scripts/strade_ciclabili.ipynb
+++ b/Scripts/strade_ciclabili.ipynb
@@ -2,27 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c8de0a00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install networkx\n",
-    "!pip install osmnx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "2e4bc86a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
+    "import json\n",
+    "from shapely.geometry import shape\n",
+    "\n",
     "import networkx as nx\n",
     "import osmnx as ox\n",
-    "import geopandas\n",
-    "import numpy as np"
+    "import geopandas as gpd\n",
+    "import numpy as np\n",
+    "\n",
+    "from my_paths import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38208600",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH_STRADE_MOTORWAY = '..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_motorway.geojson'\n",
+    "PATH_STRADE_TRUNK = '..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_trunk.geojson'\n",
+    "PATH_STRADE_PRIMARY = '..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_primary.geojson'\n",
+    "PATH_STRADE_PRIMARY_NULL = '..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_primary_null.geojson'\n",
+    "PATH_STRADE_FOOTWAY = '..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_footway.geojson'\n",
+    "PATH_STRADE_SECONDARY = \"..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_secondary.geojson\"\n",
+    "PATH_STRADE_TERTIARY = \"..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_tertiary.geojson\"\n",
+    "PATH_STRADE_RESIDENTIAL = \"..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_residential.geojson\"\n",
+    "PATH_STRADE_SERVICE = \"..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_service.geojson\"\n",
+    "\n",
+    "PATH_highway_null_unclassified = \"Data/Staging/Info_bici/highway_null_unclassified.geojson\""
    ]
   },
   {
@@ -32,18 +46,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('..\\Data\\Raw\\Info_bici\\strade_ciclabili.pickle', 'rb') as x:    \n",
-    "    G = (pickle.load(x))"
+    "with open(PATH_STRADE_CICLABILI_PICKLE_RAW, \"rb\") as f:\n",
+    "    G_strade = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "6d9269e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = ox.graph_to_gdfs(G, nodes=False)"
+    "gdf = ox.graph_to_gdfs(G_strade, nodes=False)"
    ]
   },
   {
@@ -81,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "a60a6402",
    "metadata": {},
    "outputs": [
@@ -99,12 +113,12 @@
     "print(len(gdf_motorways))  # Mostra il numero di righe\n",
     "\n",
     "# Salva in GeoJSON\n",
-    "gdf_motorways.to_file('..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_motorway.geojson', driver='GeoJSON')"
+    "gdf_motorways.to_file(PATH_STRADE_MOTORWAY, driver='GeoJSON')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "21f55516",
    "metadata": {},
    "outputs": [
@@ -122,7 +136,7 @@
     "print(len(gdf_trunks))  # Mostra il numero di righe\n",
     "\n",
     "# Salva in GeoJSON\n",
-    "gdf_trunks.to_file('..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_trunk.geojson', driver='GeoJSON')"
+    "gdf_trunks.to_file(PATH_STRADE_TRUNK, driver='GeoJSON')"
    ]
   },
   {
@@ -138,12 +152,12 @@
     "print(len(gdf_primary))  # Mostra il numero di righe\n",
     "\n",
     "# Salva in GeoJSON\n",
-    "gdf_primary.to_file('..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_primary.geojson', driver='GeoJSON')\n"
+    "gdf_primary.to_file(PATH_STRADE_PRIMARY, driver='GeoJSON')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "d79dd18c",
    "metadata": {},
    "outputs": [],
@@ -155,7 +169,7 @@
     "gdf_null_maxspeed = gdf_primary[gdf_primary[\"maxspeed\"].isna()]\n",
     "\n",
     "# Salva su file GeoJSON\n",
-    "gdf_null_maxspeed.to_file('..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_primary_null.geojson', driver='GeoJSON')\n"
+    "gdf_null_maxspeed.to_file(PATH_STRADE_PRIMARY_NULL, driver='GeoJSON')\n"
    ]
   },
   {
@@ -171,7 +185,7 @@
     "print(len(gdf_footway))  # Mostra il numero di righe\n",
     "\n",
     "# Salva in GeoJSON\n",
-    "gdf_primary.to_file('..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_footway.geojson', driver='GeoJSON')\n"
+    "gdf_primary.to_file(PATH_STRADE_FOOTWAY, driver='GeoJSON')\n"
    ]
   },
   {
@@ -192,7 +206,7 @@
     "print(len(gdf_secondary))  # Mostra il numero di righe\n",
     "\n",
     "# Salva in GeoJSON\n",
-    "gdf_secondary.to_file(\"..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_secondary.geojson\", driver='GeoJSON')"
+    "gdf_secondary.to_file(PATH_STRADE_SECONDARY, driver='GeoJSON')"
    ]
   },
   {
@@ -211,7 +225,7 @@
     "gdf_tertiary = gdf[(gdf[\"highway\"] == \"tertiary\") | (gdf[\"highway\"] == \"tertiary_link\")]\n",
     "\n",
     "# Salva in GeoJSON\n",
-    "gdf_tertiary.to_file(\"..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_tertiary.geojson\", driver='GeoJSON')"
+    "gdf_tertiary.to_file(PATH_STRADE_TERTIARY, driver='GeoJSON')"
    ]
   },
   {
@@ -229,7 +243,7 @@
     "print(len(gdf_secondary))  # Mostra il numero di righe\n",
     "\n",
     "# Salva in GeoJSON\n",
-    "gdf_residential.to_file(\"..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_residential.geojson\", driver='GeoJSON')"
+    "gdf_residential.to_file(PATH_STRADE_RESIDENTIAL, driver='GeoJSON')"
    ]
   },
   {
@@ -247,7 +261,61 @@
     "print(len(gdf_service))  # Mostra il numero di righe\n",
     "\n",
     "# Salva in GeoJSON\n",
-    "gdf_service.to_file(\"..\\\\Data\\\\Raw\\\\Info_bici\\\\strade_service.geojson\", driver='GeoJSON')"
+    "gdf_service.to_file(PATH_STRADE_SERVICE, driver='GeoJSON')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8aeebeec",
+   "metadata": {},
+   "source": [
+    "Forse ho cancellato il \"strade_ciclabili.geojson\" che stavate usando.\n",
+    "Dovrebbe essere questo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b509bc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_ciclabili_raw = gpd.read_file(PATH_CICLABILI_RAW)\n",
+    "gdf_ciclabili_staging = gdf_ciclabili_raw.copy()\n",
+    "\n",
+    "# Convertiamo alcuni tipi\n",
+    "gdf_ciclabili_staging[\"geometry\"] = gdf_ciclabili_staging[\"geometry\"].apply(lambda x: x.geoms[0])\n",
+    "gdf_ciclabili_staging[\"fine_lavor\"] = gdf_ciclabili_staging[\"fine_lavor\"].astype(int)\n",
+    "gdf_ciclabili_staging[\"lunghezza\"] = gdf_ciclabili_staging[\"lunghezza\"].astype(int)\n",
+    "gdf_ciclabili_staging = gdf_ciclabili_staging.drop([\"id_amat\", \"id_via\",\"gerarchia\"], axis=1)\n",
+    "\n",
+    "gdf_ciclabili_staging = gpd.GeoDataFrame(gdf_ciclabili_staging, geometry=\"geometry\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ad826d1",
+   "metadata": {},
+   "source": [
+    "e anziché caricarlo da file, ottenete il geodataframe come dizionario con la funzione .to_dict() a partire dalla prima parte di ETL del file raw che vi ho riscritto sopra."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df4270cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = gdf_ciclabili_staging.to_dict()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f9fa336",
+   "metadata": {},
+   "source": [
+    "Da ora in poi dovrebbe essere identico a prima! Non volevo disturbare il vostro lavoro ma ho ristrutturato le cartelle e i file"
    ]
   },
   {
@@ -258,15 +326,6 @@
    "outputs": [],
    "source": [
     "# Creazione geodataframe manuale\n",
-    "\n",
-    "import json\n",
-    "import geopandas as gpd\n",
-    "from shapely.geometry import shape\n",
-    "import numpy as np\n",
-    "\n",
-    "# Carica il GeoJSON come dizionario\n",
-    "with open(\"Data/Staging/Info_bici/strade_ciclabili.geojson\", \"r\", encoding=\"utf-8\") as f:\n",
-    "    data = json.load(f)\n",
     "\n",
     "# Costruisci il GeoDataFrame manualmente\n",
     "features = data[\"features\"]\n",
@@ -295,7 +354,7 @@
     "\n",
     "gdf_filtered.duplicated()\n",
     "\n",
-    "gdf_filtered.to_file (\"Data/Staging/Info_bici/highway_null_unclassified.geojson\")"
+    "gdf_filtered.to_file(PATH_highway_null_unclassified)"
    ]
   }
  ],
@@ -315,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
