completo sport e tempo libero

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -19,6 +19,7 @@
     "\n",
     "import geopandas as gpd\n",
     "import networkx as nx\n",
+    "from networkx.algorithms.approximation import steiner_tree\n",
     "import osmnx as ox\n",
     "\n",
     "from my_paths import *\n",
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "b27ac11f",
    "metadata": {},
    "outputs": [],
@@ -66,11 +67,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "054f3bd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G_compose = G_strade_ciclabili.copy()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "702938c1",
    "metadata": {},
    "source": [
-    "### Aggiunta di Parchi come **\"poi\"**"
+    "### Aggiunta di **Parchi** come **\"poi\"**"
    ]
   },
   {
@@ -84,14 +95,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "413f2266",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf_parchi = gpd.read_file(PATH_PARCHI_CLEAN)\n",
-    "G_compose_merged_parchi = Graph_functions.connect_poi_nodes_to_graph(G_strade_ciclabili, gdf_parchi,\n",
+    "G_compose = Graph_functions.connect_poi_nodes_to_graph(G_compose, gdf_parchi,\n",
     "                                                                     tipo = \"parchi\",\n",
+    "                                                                     poi = True,\n",
+    "                                                                     artificial=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7cc9573",
+   "metadata": {},
+   "source": [
+    "### Aggiunta di **Impianti sportivi** come **\"poi\"**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32a9ee68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_impianti_sportivi = gpd.read_file(PATH_IMPIANTI_SPORTIVI_CLEAN)\n",
+    "Graph_functions._explode_gdf_with_MultiPolygon_to_Polygon(gdf_impianti_sportivi)\n",
+    "gdf_impianti_sportivi.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "aa482998",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_impianti_sportivi = gpd.read_file(PATH_IMPIANTI_SPORTIVI_CLEAN)\n",
+    "G_compose = Graph_functions.connect_poi_nodes_to_graph(G_compose, gdf_impianti_sportivi,\n",
+    "                                                                     tipo = \"impianti sportivi\",\n",
     "                                                                     poi = True,\n",
     "                                                                     artificial=True)"
    ]
@@ -115,26 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9b5920d2",
+   "execution_count": 34,
+   "id": "4fc6c2e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "poi_nodes = [n for n, d in G_compose_merged_parchi.nodes(data=True) if d.get(\"tipo\") == \"parchi\"]\n",
-    "\n",
-    "components = list(nx.connected_components(G_compose_merged_parchi))\n",
-    "largest_cc = max(components, key=len)\n",
-    "\n",
-    "G_sub = G_compose_merged_parchi.subgraph(largest_cc).copy()\n",
-    "poi_sub = [n for n in poi_nodes if n in G_sub.nodes]\n",
-    "\n",
-    "for u, v, data in G_sub.edges(data=True):\n",
-    "    if 'weight' not in data or not isinstance(data['weight'], (int, float)):\n",
-    "        data['weight'] = 1  # o un peso di default\n",
-    "\n",
-    "from networkx.algorithms.approximation import steiner_tree\n",
-    "\n",
-    "G_sport_tempo_libero = steiner_tree(G_sub, terminal_nodes=poi_sub, weight='weight')"
+    "poi_nodes = [n for n, d in G_compose.nodes(data=True) if d.get(\"poi\") == True]\n",
+    "G_sport_tempo_libero = nx.MultiDiGraph(steiner_tree(G_compose, terminal_nodes=poi_nodes, weight='weight'))\n",
+    "# Sembra ridontante castare a MultiDiGraph il risultato di steiner_tree() che è comunque un MultiDiGraph\n",
+    "# ma per vari motivi non si riesce poi a salvare in pickle e quindi meglio \"rifare\" una copia profonda in uno nuovo"
    ]
   },
   {
@@ -147,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "b5b49bec",
    "metadata": {},
    "outputs": [],
@@ -157,6 +191,27 @@
     "\n",
     "gdf_steiner = ox.graph_to_gdfs(G_sport_tempo_libero, edges=True, nodes=False)\n",
     "gdf_steiner.to_file(PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "302967c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "528"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(gdf_steiner[gdf_steiner[\"tipo\"] == \"impianti sportivi\"])"
    ]
   }
  ],
